kubernetes/services/hello-world/route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hello-world-ingressroute
  namespace: services
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hello.tuntelder.com`)
      kind: Rule
      services:
        - name: hello-world-service
          port: 80
      middlewares:
        - name: fail2ban
          namespace: network
      # - name: authentik
      #   namespace: network
      # - name: local-only
      #   namespace: edge
  tls:
    certResolver: letsencrypt
